--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,14 +1,14 @@
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-name: Latest blog post workflow
+name: Latest YouTube Videos
 on:
   schedule: # Run workflow automatically
     - cron: '0 * * * *' # Runs every hour, on the hour
   workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 jobs:
-  update-readme-with-blog:
-    name: Update this repo's README with latest blog posts
+  update-readme-with-youtube:
+    name: Update this repo's README with latest YouTube posts
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
